css/global.css
:root {
  @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");

  --clr-accent-500: hsl(360, 79%, 52%); /* #E52222 */
  --clr-accent-400: hsl(360, 100%, 70%); /* #FF6666 */
  --clr-accent-300: hsl(360, 100%, 82%); /* #FFA6A6 */
  --clr-accent-200: hsl(360, 100%, 90%); /* #FFCCCC */
  --clr-accent-100: hsl(360, 100%, 96%); /* #FFEBEB */

  --clr-primary-400: hsl(360, 100%, 30%); /* #990000 */

  --clr-neutral-900: hsl(360, 100%, 10%); /* #330000 */
  --clr-neutral-100: hsl(0, 0%, 100%);
  --clr-neutral-200: hsl(0, 0%, 97%);

  --ff-primary: "Roboto", sans-serif;

  --ff-body: var(--ff-primary);
  --ff-heading: var(--ff-primary);

  --fw-regular: 400;
  --fw-semi-bold: 500;
  --fw-bold: 700;
  --fw-black: 900;

  --fs-300: 0.8125rem;
  --fs-400: 0.875rem;
  --fs-500: 0.9375rem;
  --fs-600: 1rem;
  --fs-700: 1.3rem;
  --fs-800: 2.5rem;
  --fs-900: 3.5rem;

  --fs-body: var(--fs-400);
  --fs-primary-heading: var(--fs-900);
  --fs-secondary-heading: var(--fs-700);
  --fs-nav: var(--fs-500);
  --fs-button: var(--fs-300);

  --size-100: 0.25rem;
  --size-200: 0.5rem;
  --size-300: 0.75rem;
  --size-400: 1rem;
  --size-500: 1.5rem;
  --size-600: 2rem;
  --size-700: 3rem;
  --size-800: 4rem;
  --size-900: 5rem;

  --size-close-icon-offset: 6em;
  --vertical-close-icon-offset: 5em;
}

@media (min-width: 47em) {
  :root {
    --fs-body: var(--fs-500);
    --fs-primary-heading: var(--fs-900);
    --fs-secondary-heading: var(--fs-800);

    --fs-nav: var(--fs-300);
  }
}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
* {
  margin: 0;
  padding: 0;
  font: inherit;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role="list"],
ol[role="list"] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
  min-height: 100%;
  overflow-x: hidden;
}

/* Set core body defaults */
body {
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
/* @media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
} */

/* For WebKit browsers (Chrome, Safari, newer versions of Opera) */
::-webkit-scrollbar {
  width: 12px; /* Set the width of the scrollbar */
}

::-webkit-scrollbar-thumb {
  background-color: var(--clr-primary-400); /* Set the color of the scrollbar thumb */
  border-radius: 10px; /* Optional: Add rounded corners to the scrollbar thumb */
}

/* For Firefox */
/* Note: This is a Mozilla Firefox specific property and might not work in all versions */
/* For full support, you might need to use a pseudo-element like ::-moz-scrollbar-thumb */
* {
  scrollbar-color: var(--clr-primary-400) #f0f0f0; /* Set the color of the scrollbar thumb and track */
}

/* Optional: Add rounded corners to the scrollbar thumb in Firefox */
*::-moz-scrollbar-thumb {
  background-color: var(--clr-primary-400);
  border-radius: 10px;
}

/* general styling */

body {
  font-size: var(--fs-body);
  font-family: var(--ff-body);
  color: var(--clr-neutral-900);
}

p:not([class]) {
  max-width: 42ch;
}

.button {
  border: 0;
  text-decoration: none;
  border-radius: 0 1rem;
  padding: 0.9em 1.5em;
  line-height: 1;
  font-weight: var(--fw-bold);
  font-size: var(--fs-button);
  background-color: var(--clr-primary-400);
  color: var(--clr-neutral-100);
}

.button:hover,
.button:focus-visible {
  background-color: var(--clr-accent-500);
}

/* utility classes */

.visually-hidden {
  position: absolute;
  position: absolute !important;
  width: 1px !important;
  height: 1px !important;
  padding: 0 !important;
  margin: -1px !important;
  overflow: hidden !important;
  clip: rect(0, 0, 0, 0) !important;
  white-space: nowrap !important;
  border: 0 !important;
}

.text-primary-400 {
  color: var(--clr-primary-400);
}
.text-accent-500 {
  color: var(--clr-accent-500);
}

.text-accent-400 {
  color: var(--clr-accent-400);
}

.text-accent-100 {
  color: var(--clr-accent-100);
}

.text-neutral-100 {
  color: var(--clr-neutral-100);
}
.text-neutral-200 {
  color: var(--clr-neutral-200);
}
.text-neutral-900 {
  color: var(--clr-neutral-900);
}

.bg-primary-400 {
  background-color: var(--clr-primary-400);
}

.bg-accent-400 {
  background-color: var(--clr-accent-400);
}

.bg-accent-100 {
  background-color: var(--clr-accent-100);
}

.bg-neutral-100 {
  background-color: var(--clr-neutral-100);
}

.bg-neutral-900 {
  background-color: var(--clr-neutral-900);
}

.fw-black {
  font-weight: var(--fw-black);
}
.fw-bold {
  font-weight: var(--fw-bold);
}

.fw-semi-bold {
  font-weight: var(--fw-semi-bold);
}

.fw-regular {
  font-weight: var(--fw-regular);
  line-height: 1.1;
}

.fs-primary-heading {
  font-size: var(--fs-primary-heading);
  line-height: 1.1;
}

.fs-secondary-heading {
  font-size: var(--fs-secondary-heading);
}

.fs-300 {
  font-size: var(--fs-300);
}

.fs-400 {
  font-size: var(--fs-400);
}

.fs-500 {
  font-size: var(--fs-500);
}

.fs-600 {
  font-size: var(--fs-600);
}

.padding-block-700 {
  padding-block: var(--size-700);
}

.padding-block-900 {
  padding-block: var(--size-900);
}

.margin-bottom-700 {
  margin-block-end: var(--size-700);
}
.margin-bottom-300 {
  margin-block-end: var(--size-300);
}
.margin-top-700 {
  margin-block-start: var(--size-700);
}

.mx-auto {
  margin-inline: auto;
}

.display-sm-none {
  display: none;
}

.flow-area {
  margin-top: 6rem;
  margin-bottom: 6rem;
}
.about-flow-area {
  margin-top: 9rem;
  margin-bottom: 9rem;
}
.text-margin {
  margin: top 3rem;
  margin-bottom: 1rem;
}
@media (min-width: 47em) {
  .display-md-inline-flex {
    display: inline-flex;
  }
}

.container {
  --max-width: 1410px;
  --container-padding: 1rem;
  width: min(var(--max-width), 100% - var(--container-padding) * 2);
  margin-inline: auto;
}

.even-columns {
  display: grid;
  gap: 1rem;
}

@media (min-width: 47em) {
  .even-columns {
    grid-auto-flow: column;
    grid-auto-columns: 1fr;
  }
}

.vertical-align-center {
  align-items: center;
}

.justify-self-end {
  justify-self: end;
}

@media (min-width: 47em) {
  .justify-self-end-md {
    justify-self: end;
  }
}

:where(.flow :not(:first-child)) {
  margin-top: var(--flow-spacer, 2em);
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}
.text-center p {
  margin-inline: auto;
}

@media (max-width: 47em) {
  .text-center-sm-only {
    text-align: center;
  }

  .text-center-sm-only p {
    margin-inline: auto;
  }
}

.square-title {
  background-color: var(--clr-accent-500); /* the red box on the title */
  width: 3rem;
  height: 3rem;
  position: relative;
  top: 1.5rem;
  right: 1.8rem;
  z-index: -1;
  margin-top: -3rem;
}

.overlay {
  position: fixed;
  width: 100vw;
  height: 100vh;
  z-index: 10;
  display: flex;
  pointer-events: none; /* Disable pointer events on the overlay */
}

.bar {
  width: 100vw;
  height: 100vh;
  background: #1a1a1a;
  pointer-events: none; /* Disable pointer events on the bars */
}

#preloader {
  background: #1a1a1a url("/images/loader.gif") no-repeat center center;
  height: 100vh;
  width: 100%;
  position: fixed;
  z-index: 100;
  overflow: hidden !important;
  transition: opacity 0.5s ease;
  opacity: 1;
  pointer-events: none; /* Disable pointer events on the preloader */
}

#preloader.hidden {
  opacity: 0;
  pointer-events: none; /* Disable pointer events when hidden */
}

.nav-bg-color {
  background-color: rgba(20, 20, 20, 0.5);
  position: fixed;
  width: 100%;
  z-index: 1000; /* Ensure the navbar is above other elements */
  /* transition: opacity 0.5s; */
}
.scrolled {
  background-color: rgba(20, 20, 20, 1); /* Set to the desired opaque color */
  transition: background-color 0.3s ease; /* Add a smooth transition effect */
}
.nav-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: var(--size-300) 0;
}

.nav-list {
  display: flex;
  gap: clamp(var(--size-400), 5vw, var(--size-700));
  font-size: var(--fs-nav);
  font-weight: var(--fw-bold);
}

.nav-list a {
  text-decoration: none;
  color: var(--clr-neutral-100);
}

.logo {
  width: 100%;
  height: auto;
  margin-right: -22rem;
}

.nav-list a:hover,
.nav-list a:focus-within {
  text-decoration: none;
  color: var(--clr-accent-500);
}
/* footer */
.footer-background {
  background-color: #121319;
  padding: 3rem;
}
.footer-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;

  width: 100%;
}
.footer-wrapper p {
  color: var(--clr-neutral-100);
  max-width: 80ch;
  opacity: 0.5;
  margin-bottom: 2rem;
  text-align: center;
}

.logo-area {
  display: grid;
  align-items: center;
  justify-content: center;
  width: 100%;
}
.logo-area img {
  width: 50%;
  height: auto;
  margin-left: 11rem;
}
.footer-nav {
  margin-top: 1rem;
  margin-bottom: 2rem;
}
.footer-social-icons {
  display: grid;
  align-items: center;
  justify-content: center; /* Optional: Align items vertically in the center */
  margin-top: 1rem;
}
.footer-social-icons ul {
  display: flex;
  list-style: none;
  padding: 0;
  margin-top: -1.4rem;
  margin-bottom: 1rem;
}

.footer-social-icons ul li {
  margin: 0 6px;
  height: 1.6rem;
  width: 1.6rem;
  color: var(--clr-neutral-100);

  background: var(--clr-accent-500);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 0.8rem;
  transition: all ease 0.3s;
}

.footer-social-icons ul li:hover {
  transform: scale(1.4);
  cursor: pointer;
}

.footer-social-icons a {
  color: var(--clr-neutral-100);
}
.copyright-wrapper {
  color: var(--clr-neutral-100);
  padding: var(--size-300) 0;
  opacity: 0.5;
}
.terms-wrapper {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}
.terms-wrapper ul {
  list-style: none;
}
.terms-list {
  display: flex;
  gap: clamp(var(--size-400), 5vw, var(--size-700));
  font-size: var(--fs-nav);
}

.terms-list a {
  text-decoration: none;
  color: var(--clr-neutral-100);
}
.terms-list a:hover,
.terms-list a:focus-within {
  text-decoration: none;
  color: var(--clr-accent-500);
}
@media screen and (min-width: 47em) and (max-width: 80em) {
  .footer-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media screen and (max-width: 47em) {
  .footer-grid {
    grid-template-columns: repeat(1, 1fr);
    padding: 0 0 4rem 0;
  }

  .footer-grid-area {
    gap: 1rem;
  }
  .footer-text {
    width: 600%;
  }
}

@media screen and (max-width: 30em) {
  .footer-text {
    width: 300%;
  }
  .footer-box-icon {
    font-size: 2.5rem;
  }
}

